2007-03-28  Brian Bidulock  <bidulock@openss7.org>

	* include/sys/strmsg.h: M_TRAIL also belongs to HPUX

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* drivers/str/bufmod.c: support for 2.6.20-1.2307.fc5
	* drivers/str/echo.c: support for 2.6.20-1.2307.fc5
	* drivers/str/mux.c: support for 2.6.20-1.2307.fc5
	* drivers/str/nullmod.c: support for 2.6.20-1.2307.fc5
	* drivers/str/nuls.c: support for 2.6.20-1.2307.fc5
	* drivers/str/testmod.c: support for 2.6.20-1.2307.fc5
	* head/linux-mdep.c: support for 2.6.20-1.2307.fc5
	* head/linux/lislocks.c: support for 2.6.20-1.2307.fc5
	* head/linux/lismem.c: support for 2.6.20-1.2307.fc5
	* include/sys/LiS/linux-mdep.h: support for 2.6.20-1.2307.fc5
	* manual/news.texi: support for 2.6.20-1.2307.fc5

	* drivers/str/bufmod.c: flush corrections
	* drivers/str/dlpidriver.c: flush corrections
	* drivers/str/echo.c: flush corrections
	* drivers/str/loop.c: flush corrections
	* drivers/str/minimux.c: flush corrections
	* drivers/str/mux.c: flush corrections
	* drivers/str/nullstrm.c: flush corrections
	* drivers/str/nuls.c: flush corrections
	* drivers/str/sad.c: flush corrections
	* drivers/str/linux/ip_strm_mod.c: flush corrections
	* drivers/str/linux/ldl.c: flush corrections
	* drivers/str/linux/mtdrv.c: flush corrections

	* drivers/str/bufmod.c: register qlock option
	* drivers/str/echo.c: register qlock option
	* drivers/str/nullmod.c: register qlock option
	* drivers/str/nuls.c: register qlock option
	* drivers/str/testmod.c: register qlock option

2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* manual/news.texi: pushed release date
	* util/test-fifo.c: report failed expectations on test cases
	* util/test-pipe.c: report failed expectations on test cases
	* util/test-sad.c: report failed expectations on test cases
	* util/test-streams.c: report failed expectations on test cases

2007-03-12  Brian Bidulock  <bidulock@openss7.org>
