@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: nuls.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2007/03/25 18:58:11 $
+ @(#) $RCSfile: nuls.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/04/01 12:22:00 $
 
  -----------------------------------------------------------------------------
 
@@ -45,14 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/03/25 18:58:11 $ by $Author: brian $
+ Last Modified $Date: 2007/04/01 12:22:00 $ by $Author: brian $
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: nuls.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2007/03/25 18:58:11 $"
+#ident "@(#) $RCSfile: nuls.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/04/01 12:22:00 $"
 
 static char const ident[] =
-    "$RCSfile: nuls.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2007/03/25 18:58:11 $";
+    "$RCSfile: nuls.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/04/01 12:22:00 $";
 
 #include <linux/autoconf.h>
 #include <linux/version.h>
@@ -73,7 +73,7 @@ static char const ident[] =
 
 #define NULS_DESCRIP	"UNIX SYSTEM V RELEASE 4.2 FAST STREAMS FOR LINUX"
 #define NULS_COPYRIGHT	"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
-#define NULS_REVISION	"LfS $RCSfile: nuls.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2007/03/25 18:58:11 $"
+#define NULS_REVISION	"LfS $RCSfile: nuls.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/04/01 12:22:00 $"
 #define NULS_DEVICE	"SVR 4.2 STREAMS Null Stream (NULS) Device"
 #define NULS_CONTACT	"Brian Bidulock <bidulock@openss7.org>"
 #define NULS_LICENSE	"GPL"
@@ -85,7 +85,7 @@ static char const ident[] =
 #define NULS_SPLASH	NULS_DEVICE	" - " \
 			NULS_REVISION	"\n"
 
-#if defined LiS && defined MODULE
+#if defined LIS && defined MODULE
 #define CONFIG_STREAMS_NULS_MODULE MODULE
 #endif
 
